# test_antlib

./: CMakeLists.txt  antrender.cpp  antrender.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pie.cpp  pie.h  pieapp.qml  piemain.cpp  poligons.cpp  poligons.h  test_antlib.pro
qml/: CMakeLists.txt  main.cpp
qml/AntRender/: AppPoligons.qml  CMakeLists.txt  CustomFileDialog.qml  CustomSlider.qml  FileDialogBackend.qml  Poligon.qml  PoligonListDelegate.qml  PoligonListView.qml  PoligonsBackend.qml  RenderControls.qml  RenderControlsForm.ui.qml  RenderView.qml  highdpifix.cpp  logger.cpp  poligondata.cpp  poligondata.h  poligonimageprovider.cpp  poligonimageprovider.h  poligonrendercontrol.cpp  poligonrendercontrol.h  qobjectvectormodel.h  register_qtypes.cpp  register_qtypes.h
tst/sta/cfg/: 12_1.YCH  12_1.ini  12_2.YCH  DAC.ini  Dac.Cfg
tst/sta/sta/: Alonka.Ini  Alonka.Sta  Amagan.Ini  Amagan.Sta  Bureinsk.Ini  Bureinsk.Sta  CHERV.STA  Chebangd.Ini  Chebangd.Sta  Cherv.ini  DRAGOSH.STA  DUGDA.STA  Demchen.Ini  Demchen.Sta  Dragosh.ini  Dugda.ini  Eterken.Ini  Eterken.Sta  Fevral.Ini  Fevral.Sta  Isa.Ini  Isa.Sta  Isaak.Ini  Isaak.Sta  KAMNEGA.STA  Kamnega.ini  Kichiran.Ini  Kichiran.Sta  MEUN.STA  Meun.ini  Mustah.Ini  Mustah.Sta  NORA.STA  Nora.ini  SKALIST.STA  Shugara.Ini  Shugara.Sta  Skalist.ini  Stlanik.Ini  Stlanik.Sta  (+14 more)
tst/ste/cfg/: dac.ini  postkms1.yce  postkms2.yce  urgpost1.yce  urgpost2.yce
tst/ste/sta/: amgun.ste  apkan.ste  badjal.ste  bolen.ste  chemchuk.ste  didon.ste  djamku.ste  dualin.ste  duki.ste  eanga.ste  ebgun.ste  evoron.ste  gerbi.ste  gorin.ste  halgaso.ste  harpich.ste  holoni.ste  hurmuli.ste  katama.ste  kms2pst.ste  lian.ste  mavrin.ste  mogdi.ste  moni.ste  mugule.ste  mukunga.ste  naldi.ste  orokot.ste  pil.ste  postysh.ste  sectali.ste  silinka.ste  soloni.ste  sonah.ste  suluk.ste  talidjak.ste  urgal1.ste  urkaltu.ste
